[package]
name = "oklabby"
version = "0.1.0"
description = "Simple cli tool for oklab color manipulation"
homepage = "https://github.com/ozwaldorf/oklabby"
authors = [ "ozwaldorf <self@ossian.dev>" ]
license = "MIT"
edition = "2021"

[dependencies]
anstream = "0.6"
anstyle = "1.0.6"
clap = { version  = "4.5", features = ["derive"] }
hex = "0.4"
interpolation = "0.3"
oklab = "1.0"
